moved some files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,2 @@
-<h1>test</>
-
-<?php 
-phpinfo();
-?>
+<meta http-equiv="refresh" content="0; url=http://93.177.64.221/testing/index.php" />
+<p><a href="testing/index.php">Redirect</a></p>
