- added reset password page and logic

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="0; url=http://93.177.64.221/testing/index.php" />
+<meta http-equiv="refresh" content="0; url=http://litwinow.xyz/testing/index.php" />
 <p><a href="testing/index.php">Redirect</a></p>
