--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <meta http-equiv="refresh" content="0; url=http://litwinow.xyz/index.php" />
-<p><a href="testing/index.php">Redirect</a></p>
+<p><a href="index.php">Redirect</a></p>
